--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </head>
     <body>
         <header>
-            <h2>サンプル</h2>
+            <h2>サンプル　HogeHoge</h2>
         </header>
         <div id="app">
             <keybord-area></keybord-area>
